refactor: 优化更新和一些小问题 - 更新改用获取latest而不是tags - 修复破冰放水 - 优化部分代码结构以提高可读性和维护性 - 修复火把的放置